--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -178,7 +178,8 @@ run1()
 <script src="/static/SVGpathUtils-6v03-min.js"></script>
 <script src="/static/sylvester.js"></script>
 <script src="/static/PrairieDraw.js"></script>
-</p><h2>w11</h2>
+</p>
+<h2>w11</h2>
 <!-- 導入 brython 程式庫 -->
 <p>
 <script src="/static/brython.js"></script>
@@ -416,10 +417,12 @@ doc["aitetris"].bind("click", aitetris.do)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
-<!-- editor2 結束 --><hr/><h2>w12</h2>
+<!-- editor2 結束 --><hr/>
+<h2>w12</h2>
 <h2>w13</h2>
 <p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
-<div id="brython_div2"></div>
+<div id="brython_div2"><img caption="false" height="199" src="/images/w13_slvs_copsim1.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim2.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim3.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim4.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim5.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim6.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim7.png" width="400"/></div>
+<div></div>
 <!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="/static/Cango-24v03-min.js"></script>
