--- a/content/w14.html
+++ b/content/w14.html
@@ -152,8 +152,33 @@ img.add_border {
 <script src="./../cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="./../cmsimde/static/sylvester.js"></script>
 <script src="./../cmsimde/static/PrairieDraw.js"></script>
-</p>
-<br />w13 << <a href='w13.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 8,
+buttonFrameLength: 4,
+buttonFrameOffset: 2,
+frameStops: {
+},
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 --></p>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/one_link.aimscene.simscene.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 8,
+buttonFrameLength: 4,
+buttonFrameOffset: 2,
+frameStops: {
+},
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/oneshape-1.mp4" type="video/mp4"/></video></div><br />w13 << <a href='w13.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
