solvespace繪圖影片上傳-1

--- a/config/content.htm
+++ b/config/content.htm
@@ -420,10 +420,10 @@ doc["aitetris"].bind("click", aitetris.do)
 <!-- editor2 結束 --><hr/>
 <h2>w12</h2>
 <h2>w13</h2>
-<h2>w14</h2>
 <p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
 <div id="brython_div2"><img caption="false" height="199" src="/images/w13_slvs_copsim1.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim2.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim3.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim4.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim5.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim6.png" width="400"/><img caption="false" height="199" src="/images/w13_slvs_copsim7.png" width="400"/></div>
-<div></div>
+<div>
+<h2>w14</h2>
 <!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="/static/Cango-24v03-min.js"></script>
@@ -442,7 +442,7 @@ frameStops: {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 --></p>
-<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">coppeliaSim模擬影片</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/one_link.aimscene.simscene.mp4" type="video/mp4"/></video></div>
 <script>
@@ -456,7 +456,21 @@ frameStops: {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass">oneshape影片</div>
+<div class="winkVideoContainerClass">oneshape繪圖過程影片</div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="/downloads/oneshape.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 8,
+buttonFrameLength: 4,
+buttonFrameOffset: 2,
+frameStops: {
+},
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/oneshape-1.mp4" type="video/mp4"/></video></div>
 <script>
@@ -472,7 +486,81 @@ frameStops: {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="/downloads/oneshape-2.mp4" type="video/mp4"/></video></div><h1>Brython</h1>
+<source src="/downloads/oneshape-2.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass">solvespace繪圖過程影片</div>
+<script>
+var winkVideoData_40923151 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
+<source src="/downloads/1.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -751,4 +839,4 @@ doc["aitetris"].bind("click", aitetris.do)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
-<!-- editor2 結束 --><hr/>
+<!-- editor2 結束 --><hr/></div>
