--- a/content/w13.html
+++ b/content/w13.html
@@ -142,6 +142,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w13</h1>
+<p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
+<div id="brython_div2"><img caption="false" height="199" src="./../images/w13_slvs_copsim1.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim2.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim3.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim4.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim5.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim6.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim7.png" width="400"/></div>
+<div>
 <br />w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
