--- a/content/w14.html
+++ b/content/w14.html
@@ -142,9 +142,6 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>w14</h1>
-<p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
-<div id="brython_div2"><img caption="false" height="199" src="./../images/w13_slvs_copsim1.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim2.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim3.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim4.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim5.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim6.png" width="400"/><img caption="false" height="199" src="./../images/w13_slvs_copsim7.png" width="400"/></div>
-<div></div>
 <!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="./../cmsimde/static/Cango-24v03-min.js"></script>
@@ -163,7 +160,7 @@ frameStops: {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 --></p>
-<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">NX影片</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/one_link.aimscene.simscene.mp4" type="video/mp4"/></video></div>
 <script>
@@ -179,6 +176,20 @@ frameStops: {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass">oneshape影片</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/oneshape.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 8,
+buttonFrameLength: 4,
+buttonFrameOffset: 2,
+frameStops: {
+},
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass">oneshape繪圖過程影片</div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/oneshape-1.mp4" type="video/mp4"/></video></div>
 <script>
 var winkVideoData = {
@@ -193,7 +204,68 @@ frameStops: {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/oneshape-2.mp4" type="video/mp4"/></video></div><br />w13 << <a href='w13.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<source src="./../downloads/oneshape-2.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass">Solvespace繪圖過程影片</div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div><br />w13 << <a href='w13.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
