--- a/content/w14.html
+++ b/content/w14.html
@@ -160,7 +160,7 @@ frameStops: {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 --></p>
-<div class="winkVideoContainerClass">NX影片</div>
+<div class="winkVideoContainerClass">coppeliaSim模擬影片</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/one_link.aimscene.simscene.mp4" type="video/mp4"/></video></div>
 <script>
@@ -174,7 +174,7 @@ frameStops: {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass">oneshape影片</div>
+<div class="winkVideoContainerClass">oneshape繪圖過程影片</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/oneshape.mp4" type="video/mp4"/></video></div>
 <script>
@@ -188,7 +188,7 @@ frameStops: {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass">oneshape繪圖過程影片</div>
+<div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/oneshape-1.mp4" type="video/mp4"/></video></div>
 <script>
@@ -205,7 +205,59 @@ frameStops: {
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/oneshape-2.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass">Solvespace繪圖過程影片</div>
+<div class="winkVideoContainerClass">solvespace繪圖過程影片</div>
+<script>
+var winkVideoData_40923151 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
+<source src="./../downloads/1.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData_40923151 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
+<source src="./../downloads/2.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData_40923151 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
+<source src="./../downloads/3.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData_40923151 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
+<source src="./../downloads/4.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
