--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <p>cmsite</p>
-<br/>個人網址:<a href="https://mdecad2022.github.io/site-Bored1236/content/w14.html">https://mdecad2022.github.io/site-Bored1236/content/w14.html</a>
-<br/>個人倉儲:<a href="https://github.com/mdecad2022/site-Bored1236">https://github.com/mdecad2022/site-Bored1236</a><h1>HW</h1>
+<p><br/>個人網址:<a href="https://mdecad2022.github.io/site-Bored1236/content/w14.html">https://mdecad2022.github.io/site-Bored1236/content/w14.html</a> <br/>個人倉儲:<a href="https://github.com/mdecad2022/site-Bored1236">https://github.com/mdecad2022/site-Bored1236</a></p>
+<h1>HW</h1>
 <h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">1 add to 100</button></p>
@@ -595,6 +595,7 @@ var winkVideoData_40923151 = {
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
+<h2 class="winkVideoContainerClass">w17</h2>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
@@ -640,7 +641,8 @@ var winkVideoData_40923151 = {
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div><h1>Brython</h1>
+<div class="winkVideoContainerClass"></div>
+<h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
