--- a/content/index.html
+++ b/content/index.html
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w17.html'>w17</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='HW.html'>Next</a> >> HW<br /><h1>About</h1>
 <p>cmsite</p>
-<br/>個人網址:<a href="https://mdecad2022.github.io/site-Bored1236/content/w14.html">https://mdecad2022.github.io/site-Bored1236/content/w14.html</a>
-<br/>個人倉儲:<a href="https://github.com/mdecad2022/site-Bored1236">https://github.com/mdecad2022/site-Bored1236</a><br /> <a href='HW.html'>Next</a> >> HW</div>
+<p><br/>個人網址:<a href="https://mdecad2022.github.io/site-Bored1236/content/w14.html">https://mdecad2022.github.io/site-Bored1236/content/w14.html</a> <br/>個人倉儲:<a href="https://github.com/mdecad2022/site-Bored1236">https://github.com/mdecad2022/site-Bored1236</a></p>
+<br /> <a href='HW.html'>Next</a> >> HW</div>
         
     <!-- footer -->
       <div class="container">
