--- a/content/w14.html
+++ b/content/w14.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w17.html'>w17</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w17.html'>w17</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w14</h1>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15<br /><h1>w14</h1>
 <!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="./../cmsimde/static/Cango-24v03-min.js"></script>
@@ -303,16 +303,7 @@ var winkVideoData_40923151 = {
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<br />w13 << <a href='w13.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
         
     <!-- footer -->
       <div class="container">
