--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,6 @@
 <h1>About</h1>
 <p>cmsite</p>
-<p><br/>個人網址:<a href="https://mdecad2022.github.io/site-Bored1236/content/w14.html">https://mdecad2022.github.io/site-Bored1236/content/w14.html</a> <br/>個人倉儲:<a href="https://github.com/mdecad2022/site-Bored1236">https://github.com/mdecad2022/site-Bored1236</a></p>
-<h1>HW</h1>
+<p><br/>個人網址:<a href="https://mdecad2022.github.io/site-Bored1236/content/index.html">https://mdecad2022.github.io/site-Bored1236/content/index.html</a><br/>個人倉儲:<a href="https://github.com/mdecad2022/site-Bored1236">https://github.com/mdecad2022/site-Bored1236</a></p><h1>HW</h1>
 <h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">1 add to 100</button></p>
