--- a/content/w15.html
+++ b/content/w15.html
@@ -142,6 +142,20 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w15</h1>
+<p>solvespace組裝影片</p>
+<script>
+var winkVideoData_40923151 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
+<source src="./../downloads/w15.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
@@ -149,8 +163,7 @@ img.add_border {
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
-<br />w14 << <a href='w14.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
+<div class="winkVideoContainerClass"></div><br />w14 << <a href='w14.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
         
     <!-- footer -->
       <div class="container">
