--- a/content/w15.html
+++ b/content/w15.html
@@ -156,6 +156,20 @@ var winkVideoData_40923151 = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
 <source src="./../downloads/w15.mp4" type="video/mp4"/></video></div>
+<p>coppeliaSim模擬動作影片</p>
+<script>
+var winkVideoData_40923151 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
+<source src="./../downloads/w15組合.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
